# qphoenix

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  langmap.csv  qphoenix.desktop  resources.qrc
cmake/: clang.txt  json_compress.txt
docs/: standards_capability.txt  standards_compatibility.txt
docs/exceptions/: exceptions.cpp  exceptions.h
docs/historymanager/: example.html  example.xml  historymanager.h
resources/: dict_template.html  dict_template_item.html  langmap.csv  resources.qrc  root.html  section.html
resources/templates/: item.html  notfound.html
resources/webkit/: root_head.html  script.js  section_head.html  style.css
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/api/: pluginapi.h
src/common/: defines.h.in
src/core/: abstractloader.h  core  core.cpp  core.h  dictionary.cpp  dictionary.h  dictionarytemplate.cpp  dictionarytemplate.h  dictionarywidget.cpp  dictionarywidget.h  icons.cpp  icons.h  infodialog.cpp  infodialog.h  languages.cpp  languages.h  loader.cpp  loader.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  multiloader.cpp  multiloader.h  pluginloader.cpp  pluginloader.h  querywrappers.cpp  querywrappers.h  specparser.cpp  specparser.h  threads.cpp  threads.h  tools.cpp  tools.h  translationwidget.cpp  translationwidget.h  translatorloader.cpp  translatorloader.h
src/core/config/: commonconfig.cpp  commonconfig.h  config.cpp  config.h  dictionaryconfig.cpp  dictionaryconfig.h  languageconfig.cpp  languageconfig.h  pluginsconfig.cpp  pluginsconfig.h  testpage.cpp  testpage.h  translator.cpp  translator.h  translatorsconfig.cpp  translatorsconfig.h
src/core/settings/: settings.cpp  settings.h  testpage.cpp  testpage.h  translator.h
src/core/tools/: info.cpp  info.h
src/dictionaries/: CMakeLists.txt
src/dictionaries/glosbe/: CMakeLists.txt  glosbe.cpp  glosbe.h
src/dictionaries/wordreference/: CMakeLists.txt  wordreference.cpp  wordreference.h  wordreference.spec.in
src/dictionaries/yandex/: CMakeLists.txt  yandex_dict.cpp  yandex_dict.h  yandex_dict.spec.in
src/exceptions/: exceptions.h  exceptions.ui
src/gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/gui/settings/: settings.cpp
src/historymanager/: example.xml  historymanager.cpp  historymanager.ui  reference.txt
src/include/: abstractinfocontainer.h  api.h  basemodule.h  configinterface.h  configpageinterface.h  defines.h  defines.h.in  dictionaryinterface.h  dictionarywidgetinterface.h  global.h  iconfig.h  iconfigpage.h  icore.h  idictionary.h  idictionarywidget.h  imainwindow.h  imodule.h  info.h  iplugin.h  itranslationwidget.h  itranslator.h  itranslatorwidget.h  languages.h  languagetable.h  mainwindowinterface.h  pluginapi.h  pluginconnector.h  plugininterface.h  settingsinterface.h  settingspageinterface.h  translatorinterface.h  translatorwidgetinterface.h
src/include/std/: iso639.h
src/libphoenix/: CMakeLists.txt  http.cpp  http.h
src/plugins/: CMakeLists.txt
src/plugins/scanner/: CMakeLists.txt  scanner.cpp  scanner.h  scanner.spec.in
src/plugins/speech/: CMakeLists.txt  speech.cpp  speech.h  speech.spec.in  speech_resources.qrc
src/plugins/trayicon/: CMakeLists.txt  trayicon.cpp  trayicon.h
src/settings/: settings.cpp  settings.h  settings.ui  settingsbase.cpp  settingsbase.h
src/tests/: CMakeLists.txt  dictionarytest.cpp  dictionarytest.h  plugintest.cpp  plugintest.h  test_specparser.cpp  test_specparser.h
src/translators/: CMakeLists.txt
src/translators/mymemory/: CMakeLists.txt  mymemory.cpp  mymemory.h  mymemory.spec.in  mymemorytranslator.cpp  mymemorytranslator.h
src/translators/yandex/: CMakeLists.txt  yandex_translator.cpp  yandex_translator.h  yandex_translator.spec.in
