SET(TARGET wordreference)

SET(SOURCES wordreference.cpp)
SET(HEADERS wordreference.h)

QT4_WRAP_CPP(MOC_SOURCES ${HEADERS})


ADD_LIBRARY( ${TARGET} SHARED ${HEDARS} ${SOURCES}  ${MOC_SOURCES})
TARGET_LINK_LIBRARIES(${TARGET} ${QT_LIBRARIES} qxtjson)


INSTALL(TARGETS ${TARGET} DESTINATION ${DICTIONARIES_PATH} )

