SET(TARGET scanner)


SET(SOURCES scanner.cpp)

SET(HEADERS scanner.h)
add_definitions(-DQT_PLUGIN)

QT5_WRAP_CPP(MOC_SOURCES ${HEADERS})

ADD_LIBRARY(${TARGET}  SHARED ${HEDARS} ${SOURCES}  ${MOC_SOURCES})
QT5_USE_MODULES(${TARGET} Widgets Core)

#QT5_ADD_PLUGIN(${TARGET}  SHARED ${HEDARS} ${SOURCES}  ${MOC_SOURCES}

INSTALL(TARGETS ${TARGET} DESTINATION ${PLUGINS_PATH})

