CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET (TARGET "trayicon")
ADD_DEFINITIONS(${QT_DEFINITIONS})


FIND_PACKAGE(Qt4 REQUIRED)
INCLUDE(${QT_USE_FILE})

ADD_DEFINITIONS(${QT_DEFINITIONS})
ADD_DEFINITIONS(-DQT_PLUGIN)
ADD_DEFINITIONS(-DQT_NO_DEBUG)
ADD_DEFINITIONS(-DQT_SHARED)
ADD_DEFINITIONS(-DQT_DLL)

include_directories(
${CMAKE_CURRENT_BINARY_DIR}
${CMAKE_INCLUDE_PATH}
${PROJECT_SOURCE_DIR}
${PROJECT_SOURCE_DIR}/../../include
)


SET(SOURCES trayicon.cpp)

SET(HEADERS trayicon.h)

QT4_WRAP_CPP(MOC_SOURCES ${HEADERS})


ADD_LIBRARY(${TARGET}  SHARED ${HEDARS} ${SOURCES}  ${MOC_SOURCES})
TARGET_LINK_LIBRARIES(${TARGET}  ${QT_LIBRARIES})


INSTALL(TARGETS ${TARGET} DESTINATION ${PLUGINS_PATH})

