SET(TARGET "yandex_translator")

SET(SOURCES yandex_translator.cpp)
SET(HEADERS yandex_translator.h)


QT5_WRAP_CPP(MOC_SOURCES ${HEADERS})


ADD_LIBRARY( ${TARGET} SHARED ${HEDARS} ${SOURCES}  ${MOC_SOURCES})
QT5_USE_MODULES(${TARGET} Core Network Widgets)
TARGET_LINK_LIBRARIES(${TARGET} phoenix )

INSTALL(TARGETS ${TARGET} DESTINATION ${TRANSLATORS_PATH} )

